# tarsafe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: unittests.yml
src/: __init__.py
tarsafe/: __init__.py  tarsafe.py
test/: test_tarsafe.py
test/data/: dirsymlink2a.tar  dirsymlink2b.tar  relative0.tar
test/data/bad/: absolute1.tar  absolute2.tar  dirsymlink.tar  relative-deep.tar  relative2.tar  symlink.tar
test/data/good/: archive.tar
